--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     width: 200px;
     border-radius: 10px;
     justify-content: center;
+    cursor: pointer;
 }
 
 .text-color-primary{
@@ -18,3 +19,8 @@
 .text-strong{
     font-weight: 600;
 }
+
+.text_title{
+    font-size: 24px;
+}
+
