--- a/style.css
+++ b/style.css
@@ -2,14 +2,32 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.card-area{
-    display: flex;
+h1{}
+
+h2{}
+
+h3{}
+
+
+
+.board{
+    
+}
+
+.card-list-area{
+    display: inline-block;
+    margin: 12px 6px;
     background-color: rgb(68, 68, 68);
-    min-height: 36px;
     width: 200px;
     border-radius: 10px;
-    justify-content: center;
     cursor: pointer;
+}
+
+.card-list-content{
+    display: flex;
+    height: auto;
+    justify-content: center;
+    align-items: center;
 }
 
 .text-color-primary{
@@ -21,6 +39,6 @@
 }
 
 .text_title{
-    font-size: 24px;
+    font-size: 22px;
 }
 
